--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <title>Bounce Balls!</title>
 </head>
 <body>
+    <div class="gameEnd">
+        <h2>Game Over...</h2>
+        <button class="restartButton">다시하기</button>
+    </div>
     <div>
     <h1>Zini's BounceBall Game!</h1>
-    <h1 class="score">0</h1>
+   <h1 class="score">0</h1>
+   <div class="lives"> <p>lives : </p><p class="live">3</p></div>
     <canvas id="Canvas" width="500" height="400"></canvas>
 </div>
     <script type="module" src = "bounceBall.js"></script>
